--- a/changelog.txt
+++ b/changelog.txt
@@ -38,7 +38,7 @@ If, for example, there is a '-' in the file name of the dll, AvsPmod will report
 please rename this dll and replace the '-' with a '_'
 
 --------------------------
-Version 2.7.8.2 [2024-09-29]
+Version 2.7.8.2 - 2.7.8.3 [2024-09-29]
 --------------------------
 * Added Trim Dialog context menu 'Don't close on 'Apply', does not close the Trim Dialog after pressing 'Apply' (User wish).
 * Added Video > Bookmarks > Copy/Paste bookmarks. Copies or paste bookmarks direct from/into the timeline.
@@ -68,6 +68,9 @@ ClipClop(last, r1, sCMD="%insert")
 * Bugfix: Bookmark difference warning didn't work.
 * Bugfix: If "Tab change loads script bookmarks" was disabled, the tab bookmarks were not displayed in the timeline when switching tab.
 * Some other changes.
+Version 2.7.8.3 
+* Bugfix: bookmarks not added if separate video window enabled. Sorry this was since 2.7.8.0
+* Apparently a double release is becoming a habit ,)
 
 --------------------------
 Version 2.7.8.0 - 2.7.8.1 [2024-09-01]
